(PC-31773)[PRO] style: Fix font-weight of bold on safari and firefox.

--- a/pro/src/styles/global/_layout.scss
+++ b/pro/src/styles/global/_layout.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-synthesis: none;
 }
 
 html {
